# freshrss-mcp-server

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  TODO_PLAYWRIGHT.md  docker-compose.yml  main.py  pyproject.toml
deploy/: freshrss-mcp.service  install.sh
src/freshrss_mcp_server/: __init__.py  config.py  exceptions.py  server.py
src/freshrss_mcp_server/api/: __init__.py  client.py  models.py
src/freshrss_mcp_server/tools/: __init__.py  articles.py  browser.py  fetcher.py
