[project]
name = "freshrss-mcp-server"
version = "0.1.0"
description = "MCP server for FreshRSS - fetch and manage RSS articles via Google Reader API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]>=1.25.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "trafilatura>=2.0.0",
    "playwright>=1.49.0",
]

[dependency-groups]
dev = [
    "ty>=0.0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/freshrss_mcp_server"]

[project.scripts]
freshrss-mcp = "freshrss_mcp_server.server:main"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
